tests/paczka1/fuzzy1/15359267.err
Error in line 1: A776 A776 69,8
Error in line 12: dnp1WKuo A776 49,3
Error in line 9: cjmI3fZ A776 97,3
Error in line 17: cjmI3fZ S75 92,9
Error in line 18: uCYbKmAWW S75 64,4
Error in line 33: vOnSqjiYa S75 19,5
Error in line 30: uCYbKmAWW A3 87,0
